Fixed up spacing/alignment

--- a/37signalspage/CSS/main.css
+++ b/37signalspage/CSS/main.css
@@ -9,6 +9,8 @@ nav {
 	text-align: right;
 	width: 100%;
 	margin-right: 0px;
+	margin-top: 0px;
+	margin-bottom: 10px;
 }
 
 nav li {
@@ -18,8 +20,10 @@ nav li {
 	font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
 	display: inline-block;
 	list-style-type: none;
-	padding: 10px;
+	padding-right: 10px;
 	margin-right: 0px;
+	margin-top: 0px;
+	margin-bottom: 10px;
 }
 
 body {
@@ -147,10 +151,10 @@ body section {
 }
 
 .customersection .customerdiv1 #customerimg1 {
-	display: inline-block;
+	display: inline;
 	text-align: left;
 	width: 10%;
-	margin-right: 30px;
+	margin-right: 60px;
 }
 
 body h2 {
@@ -164,6 +168,12 @@ body h2 {
 	font-family: "CrimsonSemiBold", "Times New Roman", Georgia, serif;
 }
 
+.customersection h2 {
+	width: 75%;
+	margin-right: 110px;
+	margin-top: 40px;
+}
+
 .customersection p {
 	margin-left: 40px;
 	margin-right: -40px;
@@ -173,14 +183,15 @@ body h2 {
 	font-size: 22px;
 	line-height: 1.3em;
 	color: #666;
-	width: 70%;
+	width: 55%;
 	display: inline-block;
 }
 
-.customersection .customerimg2 {
+.customersection #customerimg2 {
 	text-align: right;
 	display: inline-block;
-	width: 10%;
+	width: 15%;
+	margin-left: 100px;
 }
 
 .valuesection {
@@ -203,25 +214,26 @@ body h2 {
 	margin-left: 120px;
 }
 
-.column1 {
+.valuesection .column1 {
 	border: 0px solid purple;
-	width: 380px;
+	width: 25%;
 	float: left;
-	clear: left;
 	display: inline;
 	position: relative;
 	margin: 0 auto;
-	margin-left: 120px;
+	margin-left: 175px;
+	padding: 0;
 }
 
-.column2 {
+.valuesection .column2 {
 	border: 0px solid green;
-	width: 50%;
+	width: 25%;
 	float: right;
-	clear: right;
 	display: inline;
 	position: relative;
 	margin: 0 auto;
+	margin-right: 95px;
+	padding: 0px;
 }
 
 .column1 > div {
@@ -276,35 +288,41 @@ body h2 {
 
 .booksection h2 {
 	margin: 0 auto;
-	margin-left: 40px;
+	margin-left: 80px;
 	margin-top: 40px;
 	padding: 0;
+	width: 70%;
 }
 
-.booksection .bookimg1 {
+.booksection #bookimg1 {
 	display: inline;
-	width: 8%;
+	width: 12%;
 	margin: 0 auto;
+	margin-left: 10px;
 	padding: 0;
 }
 
 .booksection .bookdiv2 {
 	margin-top: 30px;
+	margin-right: 40px;
 }
 
-.booksection .bookimg2 {
+.booksection #bookimg2 {
 	display: inline-block;
-	width: 10%;
+	width: 25%;
 	margin: 0 auto;
-	padding: 0;
-	float: left;
+	margin-left: 175px;
+	text-align: center;
+	float: left;	
 }
 
 .booksection article {
 	margin: 0 auto;
-	width: 70%;
+	width: 50%;
 	display: inline;
 	float: right;
+	margin-right: 100px;
+	padding: 0px;
 }
 
 .booksection h3 {
@@ -314,6 +332,8 @@ body h2 {
 	font-style: italic;
 	font-size: 22px;
 	margin: 35px 0 10px;
+	margin-right: 100px;
+	padding: 0px;
 }
 
 .booksection p {
@@ -321,19 +341,48 @@ body h2 {
 	font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
 	font-size: 12px;
 	margin: 0;
+	margin-right: 100px;
+	padding: 0px;
 }
 
 .offeringsection {
-	margin: auto;
+	margin: 0 auto;
+	text-align: center;
+	display: block;
+	width: 80%;
+}
+
+.offeringsection h2 {
+	margin: 0 auto;
+	margin-left: 40px;
+	margin-bottom: 40px;
+}
+
+.offeringsection section {
+	margin: 0 auto;
 	text-align: center;
 	display: block;
 }
 
 .offeringsection .offeringicons {
-	width: 80%;
+	width: 75%;
 	margin: auto;
 }
 
+.offeringsection .basecamp {
+	background: none;
+	border: none;
+}
+
+.offeringsection .highrise {
+	background: none;
+	border: none;
+}
+
+.offeringsection .campfire {
+	background: none;
+	border: none;
+}
 .offeringsection .icontext {
 	color: #666;
 	font-size: 12px;
@@ -342,13 +391,13 @@ body h2 {
 	font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
 }
 
-.offeringsection .offeringlinks {
+.offeringlinks {
 	margin: auto;
 	margin-top: 30px;
 	text-align: center;
 	display: block;
-
 }
+
 
 .offeringsection .column1 {
 	float: left;
@@ -358,8 +407,10 @@ body h2 {
 	margin-right: 30px;
 	margin-left: 95px;
 	margin-bottom: 30px;
+	margin-top: 40px;
 	list-style-type: none;
 	display: inline-block;
+	margin-left: 140px;
 }
 
 .offeringsection .column2 {
@@ -368,14 +419,17 @@ body h2 {
 	padding: 0px;
 	text-align: center;
 	margin-bottom: 30px;
+	margin-top: 40px;
 	list-style-type: none;
 	display: inline-block;
+	margin-right: 100px;
 }
 
 .offeringsection li {
 	list-style-type: none;
 	margin: auto;
 	text-align: center;
+	padding: 5px;
 
 }
 
@@ -385,7 +439,8 @@ body h2 {
 	border-bottom: 1px solid #E8E8E8;
 	font-size: 14px;
 	font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
-	margin: 5px 0;
+	margin: 0 auto;
+	margin-left: 40px;
 	color: #c00;
 	text-align: center;
 }
@@ -395,6 +450,8 @@ body h2 {
 	font-style: normal;
 	color: #222;
 	font-family: "CrimsonSemiBold", "Times New Roman", Georgia, serif;
+	margin: 0 auto;
+	text-align: center;
 }
 
 .offeringlinks small {
@@ -408,15 +465,17 @@ body h2 {
 	margin-top: 40px;
 	clear: both;
 	margin-bottom: 120px;
+	text-align: center;
 }
 
 .morelinks h3 {
 	padding-bottom: 5px;
 	font-size: 14px;
 	font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
-	margin: 5px 0;
+	margin: 0 auto;
 	color: #c00;
 	text-align: center;
+	margin-left: 40px;
 }
 
 .morelinks li {
@@ -424,6 +483,8 @@ body h2 {
 	font-size: 12px;
 	font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
 	color: #369;
+	margin: auto;
+	text-align: center;
 }
 
 footer {
